--- a/myproject/templates/index.html
+++ b/myproject/templates/index.html
@@ -4,14 +4,54 @@
   <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-
     <title>Index</title>
     <!-- Template Main CSS File -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
+    />
     <link href="{% static 'style.css' %}" rel="stylesheet" />
+    <!-- Bootstrap JS -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   </head>
 
   <body>
-    <h1>Hello, How are you doing today?</h1>
+    <nav class="navbar navbar-inverse">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">MyWebSite</a>
+        </div>
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="#">Home</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          {% if user.is_authenticated %}
+          <li>
+            <a href="logout"
+              ><span class="glyphicon glyphicon-log-out"></span> Logout</a
+            >
+          </li>
+          {% else %}
+          <li>
+            <a href="register"
+              ><span class="glyphicon glyphicon-user"></span> Sign Up</a
+            >
+          </li>
+          <li>
+            <a href="login"
+              ><span class="glyphicon glyphicon-log-in"></span> Login</a
+            >
+          </li>
+          {% endif %}
+        </ul>
+      </div>
+    </nav>
+    {% if user.is_authenticated %}
+    <h1>Hello, {{user.username}}. How are you doing today?</h1>
+    {% else %}
+    <h1>Welcome to the page</h1>
+    {% endif %}
     <div class="grid-container">
       {% for feature in features %}
       <div>
